--- a/project.private.config.json
+++ b/project.private.config.json
@@ -10,7 +10,7 @@
       "list": [
         {
           "name": "",
-          "pathName": "pages/uandc/uandc",
+          "pathName": "pages/adduser/adduser",
           "query": "",
           "launchMode": "default",
           "scene": null,
