用户注册完成 开始写日志模块

--- a/app.json
+++ b/app.json
@@ -7,10 +7,10 @@
     "pages/classlist/classlist",
     "pages/admin/admin",
     "pages/handsignin/handsignin",
-    "pages/addclass/addclass",
     "pages/adduser/adduser",
     "pages/uandc/uandc",
-    "pages/log/log"
+    "pages/log/log",
+    "pages/pchange/pchange"
   ],
   "window": {
     "navigationBarTitleText": "卡卡狮编程",
