--- a/project.private.config.json
+++ b/project.private.config.json
@@ -23,7 +23,7 @@
         },
         {
           "name": "",
-          "pathName": "pages/index/index",
+          "pathName": "adminROOT/pages/plun/plun",
           "query": "",
           "launchMode": "default",
           "scene": null
